--- a/contact.html
+++ b/contact.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Contact</title>
+    <title>Kuan-Ting Liu - Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="name">Your Name</div>
+        <div class="name">Kuan-Ting Liu</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
-                <li><a href="projects.html">Project</a></li>
+                <li><a href="https://github.com/kuankuanliu?tab=repositories" target="_blank">Project</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
     
-    <section id="contact-info">
-        <h2>Contact Information</h2>
-        <p>Feel free to get in touch with me through the following platforms:</p>
-        <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
-    </section>
+    <main class="contact-container">
+        <h1>Contact Information</h1>
+        <p>Email: <a href="mailto:ktliu2000@gmail.com">ktliu2000@gmail.com</a></p>
+        <p>Phone: <a href="tel:+14582727409">458-272-7409</a></p>
+        <p>Address: Oregon State University</p>
+    </main>
     
     <footer>
-        <p>© Your Name 2024</p>
+        <p>© Kuan-Ting 2024</p>
     </footer>
 </body>
 </html>
