--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="work.html">Work</a></li>
-                <li><a href="#projects">Project</a></li>
+                <li><a href="https://github.com/kuankuanliu?tab=repositories" target="_blank">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -26,10 +26,12 @@
         
         <section id="about">
             <h2>About Me</h2>
-            <p>Write something about yourself here.</p>
+            <p><p>An innovative engineer with 5 years of experience in semiconductor technologies and proficiency in computer science and AI.
+                 Known for strong data analytical and troubleshooting skills, adept in cross-functional leadership, 
+                 collaborative work style in diverse environments, and efficiently managing and prioritizing tasks in complex projects.</p></p>
             <div class="social-media">
-                <a href="your-linkedin-profile"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="your-github-profile"><img src="github-icon.png" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/kuan-ting-liu-b3a7bab7/">LinkedIn</a> | 
+                <a href="https://github.com/kuankuanliu?tab=repositories">GitHub</a>
             </div>
         </section>
     </div>
