update css and index

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         
         <section id="about">
             <h2>About Me</h2>
-            <p><p>An innovative engineer with 5 years of experience in semiconductor technologies and proficiency in computer science and AI.
+            <p>An innovative engineer with 5 years of experience in semiconductor technologies and proficiency in computer science and AI.
                  Known for strong data analytical and troubleshooting skills, adept in cross-functional leadership, 
-                 collaborative work style in diverse environments, and efficiently managing and prioritizing tasks in complex projects.</p></p>
+                 collaborative work style in diverse environments, and efficiently managing and prioritizing tasks in complex projects.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/kuan-ting-liu-b3a7bab7/">LinkedIn</a> | 
                 <a href="https://github.com/kuankuanliu?tab=repositories">GitHub</a>
