--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="work.html">Work</a></li>
-                <li><a href="https://github.com/kuankuanliu?tab=repositories" target="_blank">Project</a></li>
+                <li><a href="https://github.com/kuankuanliu" target="_blank">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
