add projet page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <div class="name">Kuan-Ting Liu</div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
-                <li><a href="https://github.com/kuankuanliu" target="_blank">Project</a></li>
+                <li><a href="project.html">Project</a></li> 
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+    
     
     <div class="content-flex">
         <div class="main-image">
