--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
     </header>
     
     <main class="project-container">
-        <a href="https://github.com/kuankuanliu" target="_blank">My Projects on GitHub</a>
+        <a href="https://github.com/kuankuanliu" target="_blank" rel="noopener noreferrer">My Projects on GitHub</a>
     </main>
     
     <footer>
