--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                  Known for strong data analytical and troubleshooting skills, adept in cross-functional leadership, 
                  collaborative work style in diverse environments, and efficiently managing and prioritizing tasks in complex projects.</p>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/kuan-ting-liu-b3a7bab7/">LinkedIn</a> | 
-                <a href="https://github.com/kuankuanliu?tab=repositories">GitHub</a>
+                <a href="https://www.linkedin.com/in/kuan-ting-liu-b3a7bab7/" target="_blank">LinkedIn</a> | 
+                <a href="https://github.com/kuankuanliu?tab=repositories" target="_blank">GitHub</a>                
             </div>
         </section>
     </div>
