finish the bug of project

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
-                <li><a href="https://github.com/kuankuanliu?tab=repositories" target="_blank">Project</a></li>
+                <li><a href="project.html">Project</a></li> 
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
