--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="name">Kuan-Ting Liu</div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="project.html">Project</a></li> 
                 <li><a href="contact.html">Contact</a></li>
