--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="work.html" class="active">Work</a></li>
-                <li><a href="projects.html">Project</a></li>
+                <li><a href="project.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
