--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kuan-Ting Liu - Contact</title>
+    <title>Kuan-Ting - Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     </main>
     
     <footer>
-        <p>© Kuan-Ting 2024</p>
+        <p>© Kuan-Ting, Liu 2024</p>
     </footer>
 </body>
 </html>
