--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
+    <title>Kuan-Ting - Personal Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,11 +36,9 @@
             </div>
         </section>
     </div>
-    
 
-    
     <footer>
-        <p>© Kuan-Ting 2024</p>
+        <p>© Kuan-Ting, Liu 2024</p>
     </footer>
 </body>
 </html>
