--- a/work.html
+++ b/work.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Work Experience</title>
+    <title>Kuan-Ting - Work Experience</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="name">Your Name</div>
+        <div class="name">Kuan-Ting Liu</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -53,7 +53,7 @@
     </section>
     
     <footer>
-        <p>© Your Name 2024</p>
+        <p>© Kuan-Ting, Liu 2024</p>
     </footer>
 </body>
 </html>
